# Bot_worldscan

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  apply_settings_tab_fix.py  bugfixing.mdc  build_executable.py  code_architecture_report.md  config.ini  config_manager.py  create_simple_patch.py  debug_app.py  debug_simple_fix.py  direct_line_fix.py  escape_fix.py  extract_working_code.py  file_version_info.txt  final_fix.py  final_name_fix.py  final_working_fix.py  fix.py  fix_debug.py  fix_debug2.py  fix_line107.py  fix_name_tags.py  fix_name_tags_final.py  fix_settings_tab.py  fix_string_replacer.py  fix_tags.py  fix_tags2.py  fix_translation_tags.py  fix_translator.py  fixed_test_check_translations.py  gui.py  hex_fix.py  internationalization_verification_report.md  language_test_checklist.md  (+36 more)
.cursor/rules/: memory.mdc  projectplan.mdc  scout.mdc  scoutproject.mdc  worldscanner.mdc
.github/workflows/: ci.yml
config/: calibration_data.json  calibration_points.json  game_world_search.json
config/actions/: current_sequence.json  positions.json
docs/: RELEASE_NOTES.md
docs/api/: README.md
docs/developer/: README.md  cross_platform_testing.md  distribution_channels.md  final_qa_checklist.md  github_release_template.md  integration_testing.md  internationalization.md  performance_benchmark.md  security_review.md  test_plan.md  update_mechanism.md  update_system.md
docs/user_guide/: README.md  getting_started.md  installation.md  introduction.md  language_settings.md  updates.md  whats_new.md
installer/: README.md  create_installer_images.py  scout_installer.nsi
scan_logs/: scan_log_20250220-224147.txt  scan_log_20250220-224653.txt  scan_log_20250220-225512.txt  scan_log_20250220-225644.txt  scan_log_20250220-225823.txt  scan_log_20250220-230314.txt  scan_log_20250220-230625.txt  scan_log_20250220-230815.txt  scan_log_20250220-230937.txt  scan_log_20250220-231120.txt  scan_log_20250220-231508.txt  scan_log_20250220-231636.txt  scan_log_20250221-210957.txt
scout/: .coverage  TB_Scout_Application_Report.md  __init__.py  __main__.py  actions.py  app.py  benchmark_detection.py  bugfixing.mdc  config.ini  config_manager.py  debug_window.py  game_state.py  game_world_coordinator.py  game_world_direction.py  game_world_position.py  game_world_search.py  game_world_search_tab.py  gui.py  gui_controller.py  main.py  memory.mdc  overlay.py  pattern_matcher.py  pyproject.toml  run_check_translations.py  run_translator.py  scoutrules.mdc  selector_tool.py  template_matcher.py  text_ocr.py  version.py  window_manager.py  world_scanner.py
scout/automation/: actions.py  core.py  executor.py  search_automation.py  search_patterns.py
scout/capture/: __init__.py  capture_manager.py  ocr_processor.py  pattern_matcher.py
scout/config/: __init__.py  calibration_data.json  config_manager.py  direction_definitions.json  direction_positions.json
scout/core/: __init__.py  config.py  coordinate_manager.py  logging.py  sound_manager.py  window_tracker.py  world_position.py  world_scanner.py
scout/documentation/: calibration_point_explanation.md
scout/gui/: __init__.py  direction_widget.py  game_world_coord_widget.py  game_world_grid.py  game_world_search_controls.py  game_world_search_preview.py  game_world_search_results.py  game_world_search_settings.py  game_world_search_tab.py  main_window.py  position_selector.py  search_grid_widget.py
scout/ocr_output/: ocr_result_1740805174.json  ocr_result_1740805176.json  ocr_result_1740805177.json  ocr_result_1740805178.json  ocr_result_1740805179.json  ocr_result_1740805180.json  ocr_result_1740805226.json  ocr_result_1740805229.json  ocr_result_1740805230.json  ocr_result_1740805231.json  ocr_result_1740805233.json  ocr_result_1740805235.json  ocr_result_1740805236.json  ocr_result_1740805237.json  ocr_result_1740805238.json  ocr_result_1740805239.json  ocr_result_1740805240.json  ocr_result_1740805241.json  ocr_result_1740805243.json  ocr_result_1740805244.json  ocr_result_1740805245.json  ocr_result_1740805247.json  ocr_result_1740805248.json  ocr_result_1740805249.json  ocr_result_1740805250.json  ocr_result_1740805251.json  ocr_result_1740805253.json  ocr_result_1740805254.json  ocr_result_1740805255.json  ocr_result_1740805257.json  ocr_result_1740805258.json  ocr_result_1740805259.json  ocr_result_1740805260.json  ocr_result_1740805261.json  ocr_result_1740805263.json  ocr_result_1740805264.json  ocr_result_1740805265.json  ocr_result_1740805266.json  ocr_result_1740805267.json  ocr_result_1740805268.json  (+60 more)
scout/resources/: __init__.py
scout/scan_logs/: scan_log_20250220-224046.txt  scan_log_20250220-224803.txt  scan_log_20250220-225925.txt  scan_log_20250220-230046.txt  scan_log_20250220-230502.txt  scan_log_20250220-230527.txt  scan_log_20250220-231325.txt
scout/tests/: __init__.py
scout/translations/: README.md  create_qm_files.py  scout_de.ts  scout_de_DE.qm  scout_en.qm  scout_en.ts  translator_app.py  verify_translations.py
scout/ui/: main_window.py  service_locator_ui.py
scout/visualization/: __init__.py  debug_visualizer.py  debug_window.py  overlay.py  pattern_matching_overlay.py
tb_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_app.py  test_main.py
tests/capture/: test_capture_manager.py  test_ocr_processor.py  test_pattern_matcher.py
tests/config/: test_config_manager.py
tests/core/: test_config.py  test_coordinate_manager.py  test_logging.py  test_sound_manager.py  test_version.py  test_window_tracker.py  test_world_position.py  test_world_scanner.py
tests/data/: generate_test_data.py  test_config.ini
tests/gui/: test_main_window.py
tests/visualization/: test_coordinate_visualizer.py  test_debug_visualizer.py
tools/: build_linux.py  build_macos.py  create_icns.sh  mock_update_server.py  prepare_release.py  run_release_verification.py  verify_release.bat  verify_release.sh
venv_tb/: pyvenv.cfg
venv_tb/Scripts/: activate  activate.bat  asadmin  bundle_image  cfadmin  cq  (+18 more)
(+151 files in other folders)
