[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-scout"
version = "0.1.0"
description = "Total Battle Game Assistant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TB Scout Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",
]
dependencies = [
    "PyQt6>=6.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "mss>=9.0.1",
    "pywin32>=306",
    "pynput>=1.7.6",
    "pydirectinput>=1.0.4",
    "pyautogui>=0.9.54",
    "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.3.1",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xvfb>=3.0.0",
    "pytest-randomly>=3.15.0",
    "pytest-repeat>=0.9.3",
    "coverage>=7.4.1",
    "hypothesis>=6.98.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tb_scout"
Repository = "https://github.com/yourusername/tb_scout.git"
Issues = "https://github.com/yourusername/tb_scout/issues"

[project.scripts]
tb-scout = "scout.__main__:main"

[tool.setuptools]
packages = ["scout"]

[tool.setuptools.package-data]
scout = [
    "config.ini",
    "images/*",
    "sounds/*",
]

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "B", "A", "C4", "T20", "RET", "SIM", "ERA"]
ignore = ["D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "TID252"]
"**/__init__.py" = ["TID252"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "pytesseract.*",
    "mss.*",
    "win32gui.*",
    "win32con.*",
    "win32api.*",
    "PyQt6.*",
    "pygame.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: mark test as slow",
    "integration: mark test as integration test",
    "gui: mark test as requiring GUI",
    "ocr: mark test as requiring Tesseract OCR",
    "capture: mark test as requiring screen capture",
    "pattern: mark test as requiring pattern matching",
    "window: mark test as requiring window management",
    "config: mark test as requiring configuration management",
    "visualization: mark test as requiring visualization",
] 