[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
description = "Game automation and detection tool for Total Battle"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Scout Team", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: X11 Applications :: Qt",
]
keywords = ["game", "automation", "computer-vision", "detection", "template-matching", "ocr"]
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
    "PyQt6-sip>=13.5.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "mss>=9.0.0",
    "pytesseract>=0.3.10",
    "ultralytics>=8.0.0",
    "scikit-image>=0.20.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "colorlog>=6.7.0",
    "PyQt6-tools>=6.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-xvfb>=2.0.0",
    "ruff>=0.0.267",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
    "black>=23.3.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "build>=0.10.0",
    "twine>=4.0.2",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.0.3",
    "pdbpp>=0.10.3",
    "ipython>=8.13.0",
    "faker>=18.10.0",
]

[project.urls]
"Bug Reports" = "https://github.com/yourusername/scout/issues"
"Source" = "https://github.com/yourusername/scout"
"Documentation" = "https://github.com/yourusername/scout/docs"

[project.scripts]
scout = "scout.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "scout.__version__"}

[tool.setuptools.packages.find]
include = ["scout*"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "ERA"]
ignore = ["E203", "E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "scout.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
addopts = "--cov=scout --cov-report=term-missing"
testpaths = ["scout/tests"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"] 